--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/kyletozer/library-manager-v1#readme",
   "dependencies": {
+    "body-parser": "^1.16.0",
     "express": "^4.14.0",
     "express-handlebars": "^3.0.0",
     "jade": "^1.11.0",
